@@ -269,7 +269,7 @@ $specialPageAliases = array(
 	'Import'                    => array( 'ייבוא', 'ייבוא_דפים' ),
 	'Lockdb'                    => array( 'נעילת_בסיס_הנתונים' ),
 	'Unlockdb'                  => array( 'שחרור_בסיס_הנתונים' ),
-	'Userrights'                => array( 'ניהול_הרשאות_משתמש' ),
+	'Userrights'                => array( 'ניהול_הרשאות_משתמש' , 'הפיכת_משתמש_למפעיל_מערכת' , 'הענקת_או_ביטול_הרשאת_בוט' ),
 	'MIMEsearch'                => array( 'חיפוש_MIME' ),
 	'FileDuplicateSearch'       => array( 'חיפוש_קבצים_כפולים' ),
 	'Unwatchedpages'            => array( 'דפים_שאינם_במעקב' ),
