@@ -147,7 +147,7 @@ $specialPageAliases = array(
 	'Import'                    => array( 'Importer' ),
 	'Lockdb'                    => array( 'Lås database' ),
 	'Unlockdb'                  => array( 'Åpne database' ),
-	'Userrights'                => array( 'Brukerrettigheter' ),
+	'Userrights'                => array( 'Brukerrettigheter', 'Gjør_en_bruker_til_administrator', 'Gi_eller_fjern_botstatus' ),
 	'MIMEsearch'                => array( 'MIME-søk' ),
 	'FileDuplicateSearch'       => array( 'Filduplikatsøk' ),
 	'Unwatchedpages'            => array( 'Uovervåkede sider' ),
